k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    app: frontend
  name: frontend
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: frontend
